src/test/resources/semantic/accept/assignmentToArray.ul
void main() {
}

void foo() {
    int[10] foo;
    int[10] bar;
    foo = bar;
}
