src/test/resources/semantic/reject/equalInvalidTypesArray1.ul
void main() {
}

void foo() {
    boolean result;
    boolean[2] array;
    result = true == array;
}
